[package]
name = "smarttui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libatasmart = { git = "https://github.com/EllisK-L/libatasmart", branch = "smart_parse_attributes" }
libatasmart-sys = "0.2.0"
cursive = "0.20.0"
cursive-tabs = "^0"